--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header{
 .name{
     
     color: white;
-    margin-left: 10%;
+    margin-left: 5vw;
 }
 .name1{
     color: rgb(245, 74, 74);
@@ -30,7 +30,7 @@ li{
     display: inline-block;
     font-size: large;
     font-weight: bold;
-    margin-left: 20px;
+    margin-left: 2vw;
     
 }
 #home{
@@ -68,7 +68,7 @@ li{
 }
 button{
     background-color: rgb(245, 74, 74);
-    padding: 2vh;
+    padding: 2%;
     border-radius: 7%;
     color: white;
     font-size: large;
@@ -101,7 +101,7 @@ button:hover{
     background-color: black;
     color: white;
     padding: 1vh;
-    font-size: larger;
+    font-size: 500;
     font-weight: bold;
 }
 #aboutme{
